Tue Jun 24 14:10:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_1383_Regression/SimpleServer.cpp:
        * tests/Bug_1383_Regression/SimpleClient.cpp:
        * tests/Bug_1639_Regression/struct_client.cpp:
        * tests/Bug_2543_Regression/bug_2543_regression.cpp:
        * tests/Bug_3198_Regression/bug_3198_regression.cpp:
        * tests/DynUnion_Test/DynUnionTest.cpp:
        * tests/ORB_Local_Config/Bug_2612/Test.cpp:
        * tests/POA/wait_for_completion/wait_for_completion.cpp:
        * tests/Timeout/client.cpp:

          Fix fuzz errors incorrect ACE_TMAIN/main use.

Tue Jun 24 13:37:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_1869_Regression/client.cpp:
        * tests/Bug_1869_Regression/server.cpp:
        * tests/Bug_2419_Regression/client.cpp:
        * tests/Collocation/Collocation.cpp:
        * tests/Collocation/Collocation_Tester.cpp:
        * tests/Collocation/Collocation_Tester.h:
        * tests/FL_Cube/client.cpp:
        * tests/Oneway_Timeouts/client.cpp:
        * tests/Oneway_Timeouts/server.cpp:
        * tests/Sequence_Unit_Tests/Unbounded_String.cpp:
        * tests/Sequence_Unit_Tests/Unbounded_Octet.cpp:
        * tests/Sequence_Unit_Tests/Bounded_String.cpp:
        * tests/Sequence_Unit_Tests/Unbounded_Simple_Types.cpp:
        * tests/Sequence_Unit_Tests/Bounded_Simple_Types.cpp:

          Fix fuzz errors incorrect ACE_TMAIN/main use.

Tue Jun 24 12:43:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/contrib/mcpp/testmain.cpp:
        * TAO_IDL/contrib/mcpp/cc1.cpp:
        * utils/monitor/monitor_client.cpp:

          Fix fuzz errors incorrect ACE_TMAIN/main use.

Tue Jun 24 12:02:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * docs/tutorials/Quoter/Naming_Service/server.cpp:
        * docs/tutorials/Quoter/Naming_Service/client.cpp:
        * docs/tutorials/Quoter/RT_Event_Service/server.cpp: