@@ -1,3 +1,9 @@
+Tue Jun 24 15:22:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
+
+        * tests/Bug_1636_Regression/client.cpp:
+
+          Fix fuzz errors incorrect ACE_TMAIN/main use.
+
 Tue Jun 24 14:10:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
 
         * tests/Bug_1383_Regression/SimpleServer.cpp:
